// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps maps the action generators 1`] = `
Object {
  "payload": Object {
    "name": "name",
  },
  "type": "CreateGroupFlow/UPDATE_GROUP_DATA",
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "groupData": Object {
    "name": "name",
  },
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "CreateGroupFlow": Object {
    "groupData": Object {
      "name": "name",
    },
  },
  "goToNextStep": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
  },
}
`;
